--- a/cc.html
+++ b/cc.html
@@ -55,8 +55,11 @@
             cameraDevices.push(device);
           }
         }
-        captureCamera(document.getElementById("camera2"),cameraDevices[0].deviceId);
+        setTimeout(() => {
+              captureCamera(document.getElementById("camera2"),cameraDevices[0].deviceId);
         captureCamera(document.getElementById("camera1"),cameraDevices[1].deviceId);
+            }, 1000)
+        
         return cameraDevices;
       }
 
