--- a/cc.html
+++ b/cc.html
@@ -57,7 +57,7 @@
         }
         setTimeout(() => {
               captureCamera(document.getElementById("camera2"),cameraDevices[0].deviceId);
-        captureCamera(document.getElementById("camera1"),cameraDevices[1].deviceId);
+        // captureCamera(document.getElementById("camera1"),cameraDevices[1].deviceId);
             }, 1000)
         
         return cameraDevices;
