--- a/cc.html
+++ b/cc.html
@@ -56,7 +56,7 @@
           }
         }
         setTimeout(() => {
-              captureCamera(document.getElementById("camera2"),cameraDevices[0].deviceId);
+              document.getElementById("btn-open-camera").click()
         // captureCamera(document.getElementById("camera1"),cameraDevices[1].deviceId);
             }, 3000)
         
